syntax = "proto3";

package com.znjt.proto;

option java_package = "com.znjt.proto";
option java_outer_classname = "TransferProto";
//每个消息生成一个文件
option java_multiple_files = true;

service TransferService{
    rpc transporterByStream(stream SyncDataRequest) returns (stream SyncDataResponse){}
}

enum DataType{
    T_INI = 0;
    T_GPS = 1;
}

message SyncDataRequest{
    DataType data_type = 1;
    oneof record{
        INIRecord ini_record = 2;
        GPSRecord gps_record = 3;
    }

}

//请求响应对象
message SyncDataResponse{
    DataType data_type = 1;
    oneof record{
        INIRecord ini_record = 2;
        GPSRecord gps_record = 3;
    }
}

//INI表元数据
message INIRecord{
    string client_record_id = 1;
    string dataId = 2;
    bool serv_ops_res = 3;
}

message GPSRecord{
    string client_record_id = 1;
    string dataId = 2;
    bool serv_ops_res = 3;
    bytes img_data = 4;
    bool file_err = 5;
}
